[tool.poetry]
name = "wordle_yd2798"
version = "0.1.0"
description = "Python package for Wordle game functions"
authors = ["Yixuan Ding"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
